--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,31 @@
 @import "tailwindcss";
+
+@theme {
+  --color-background: #f9f9f9;
+  --color-primary: #111111;
+  --color-background-secondary: #dddddd;
+  --color-secondary: #1a1a2e;
+  --color-highlight: #4d4dff;
+}
+
+body {
+  display: grid;
+  height: 100dvh;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+
+header:has(#menu_mobile:checked) {
+  margin-bottom: 1.5em;
+  transition: 0.15s margin-bottom ease-in-out;
+
+  .menu {
+    display: flex;
+  }
+}
+/*
+.overflow-hidden {
+  overflow: visible!important;
+  aspect-ratio: auto!important;
+}
+*/
